docs: add initial documentation
