# handler/deleteOpening.go
@@ -8,6 +8,19 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// @BasePath /api/v1 
+
+// @Summary Delete Opening
+// @Description Delete a new job opening
+// @Tags Openings 
+// @Accept json
+// @Produce json 
+// @Param request body DeleteOpeningRequest true "Request body"
+// @Success 200 {object} DeleteOpeningResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 404 {object} ErrorResponse
+// @Router /opening [post]
+
 func DeleteOpeningHandler(ctx *gin.Context){
 	id := ctx.Query("id")
 	if id == ""{
